The final version, with images and other inputs.

--- a/html/assignment_dev.html
+++ b/html/assignment_dev.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="jumbotron">
-        <div class="container text-center">
+        <div class="container text-center" style="font-family: 'Audiowide';">
           <h1>CONTRIBUTORS TO THIS ASSIGNMENT CODE</h1>      
           
         </div>
@@ -106,7 +106,7 @@
                 <t style="font-size: 190%;">Github profile</t><br>
             </div>
             <div class="col-xs-4"></div>
-                <t style="font-size: 175%;"><a href="https://github.com/">Sravani</a></t>
+                <t style="font-size: 175%;"><a href="https://github.com/Sravani2018">Sravani2018</a></t>
             </div>
           </div>
         </div>
